# bedrock-cli-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EPIC3_COMPLETION_STATUS.md  EPIC_COMPLETION_STATUS.md  README.md  SECURITY.md  config.yaml  config.yaml.backup  config.yaml.example  test-redux-sse.yaml  test_agent.sh  test_bash.sh
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
crates/bedrock-agent/: CLAUDE.md  Cargo.toml
crates/bedrock-agent/src/: lib.rs  main.rs
crates/bedrock-client/: CLAUDE.md  Cargo.toml
crates/bedrock-client/src/: lib.rs  streaming.rs  ui.rs
crates/bedrock-config/: CLAUDE.md  Cargo.toml
crates/bedrock-config/src/: env_substitution.rs  lib.rs
crates/bedrock-conversation/: Cargo.toml  README.md
crates/bedrock-conversation/src/: lib.rs  manager.rs  metadata.rs  storage.rs
crates/bedrock-core/: CLAUDE.md  Cargo.toml
crates/bedrock-core/src/: lib.rs
crates/bedrock-mcp/: CLAUDE.md  Cargo.toml
crates/bedrock-mcp/src/: client.rs  config.rs  conversions.rs  lib.rs  manager.rs  tool_wrapper.rs  types.rs
crates/bedrock-mcp/src/transport/: mod.rs  sse.rs  stdio.rs
crates/bedrock-metrics/: CLAUDE.md  Cargo.toml
crates/bedrock-metrics/src/: lib.rs
crates/bedrock-task/: CLAUDE.md  Cargo.toml
crates/bedrock-task/src/: lib.rs  todo.rs
crates/bedrock-task/tests/: todo_sequence.rs
crates/bedrock-tools/: CLAUDE.md  Cargo.toml
crates/bedrock-tools/src/: execute_bash.rs  fs_tools.rs  lib.rs  search_tools.rs  security.rs  todo.rs  todo_manage.rs  todo_planner.rs  todo_tool.rs
docs/: ARCHITECTURE_DECISION_RECORDS.md  CACHE_IMPLEMENTATION_DRAFT.md  DOCUMENTATION_REORGANIZATION_PLAN.md  MCP_ARCHITECTURE_IMPROVEMENTS.md  MCP_IMPLEMENTATION_GAPS.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_IMPROVEMENT_PLAN.md  MCP_INTEGRATION.md  MCP_TEST_SUMMARY.md  README.md  observability_design.rs  transport_layer_design.rs
docs/design/: configuration_management_design.rs  error_recovery_design.rs  message_routing_design.rs  tool_registry_design.rs
docs/guides/: configuration.md  getting-started.md  todo-planning.md
docs/implementation/mcp/: README.md  implementation-status.md  integration-guide.md  known-issues.md
docs/overview/: ARCHITECTURE.md  PROJECT_OVERVIEW.md
docs/status/: EPIC_STATUS.md  IMPLEMENTATION_STATUS.md
examples/: agent.yaml  basic_usage.rs  cli_demo.rs  mcp-sse-figma.yaml  mcp-sse-redux.yaml  mcp-sse-test.yaml  mcp-stdio-figma.yaml  mcp-stdio-test.yaml  mcp-test-simple.yaml  mcp_demo.rs  mcp_figma_test.rs  simple_task.rs  test_aws_sdk_types.rs  test_figma_mcp.rs  test_mcp_bedrock_integration.rs  test_mcp_full.sh  test_mcp_integration.rs  test_mcp_sse_figma.rs  test_mcp_sse_redux.rs  test_mcp_stdio_figma.rs  test_mcp_tool_execution.rs
memory/agents/: README.md
memory/sessions/: README.md
src/: main.rs
test-react-app/my-react-app/: package-lock.json
workspace/results/: 262a5086-ce06-47dc-b3ed-bd2bb9ba7927.json
