[workspace]
resolver = "2"
members = [
    "crates/bedrock-core",
    "crates/bedrock-client",
    "crates/bedrock-tools",
    "crates/bedrock-mcp",
    "crates/bedrock-task",
    "crates/bedrock-config",
    "crates/bedrock-metrics",
    "crates/bedrock-agent",
    "crates/bedrock-conversation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maddinenisri/bedrock-cli-agent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# AWS SDK
aws-config = "1.5"
aws-sdk-bedrockruntime = "1.58"
aws-smithy-types = "1.2"
aws-smithy-runtime-api = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP and streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
lru = "0.12"

# Testing
mockall = "0.13"
tempfile = "3.14"

[package]
name = "bedrock-cli-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AWS Bedrock LLM Agent CLI with built-in tools and MCP support"

[[bin]]
name = "bedrock-agent"
path = "src/main.rs"

[dependencies]
bedrock-core = { path = "crates/bedrock-core" }
bedrock-client = { path = "crates/bedrock-client" }
bedrock-tools = { path = "crates/bedrock-tools" }
bedrock-task = { path = "crates/bedrock-task" }
bedrock-config = { path = "crates/bedrock-config" }
bedrock-conversation = { path = "crates/bedrock-conversation" }
bedrock-agent = { path = "crates/bedrock-agent" }
bedrock-mcp = { path = "crates/bedrock-mcp" }

# For examples
aws-sdk-bedrockruntime = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "test_mcp_integration"
path = "examples/test_mcp_integration.rs"

[[example]]
name = "test_mcp_sse_redux"
path = "examples/test_mcp_sse_redux.rs"

[[example]]
name = "test_mcp_sse_figma"
path = "examples/test_mcp_sse_figma.rs"

[[example]]
name = "test_mcp_stdio_figma"
path = "examples/test_mcp_stdio_figma.rs"

[[example]]
name = "test_mcp_bedrock_integration"
path = "examples/test_mcp_bedrock_integration.rs"

[[example]]
name = "test_mcp_tool_execution"
path = "examples/test_mcp_tool_execution.rs"