[package]
name = "bedrock-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML-based configuration management for Bedrock CLI Agent"

[dependencies]
bedrock-core = { path = "../bedrock-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = "1.11"
once_cell = "1.20"
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }