[package]
name = "bedrock-conversation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Conversation state management and persistence for Bedrock CLI Agent"

[dependencies]
bedrock-core = { path = "../bedrock-core" }
bedrock-config = { path = "../bedrock-config" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dirs = "5.0"
sha2 = "0.10"
aws-sdk-bedrockruntime = { workspace = true }
aws-smithy-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }