[package]
name = "bedrock-task"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Task processing engine for Bedrock CLI Agent"

[dependencies]
bedrock-core = { path = "../bedrock-core" }
bedrock-client = { path = "../bedrock-client" }
bedrock-tools = { path = "../bedrock-tools" }
bedrock-config = { path = "../bedrock-config" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }