[package]
name = "bedrock-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable tool system for Bedrock CLI Agent"

[dependencies]
bedrock-core = { path = "../bedrock-core" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"
once_cell = "1.19"
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }